[refactor][lib][storage] enhance FileHelper and StorageWriterUtil with improved error handling, validation, and documentation